# python-dunderlab.docs

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  dunderlab.docs.wpr  dunderlab.docs.wpu  pyproject.toml  setup.py
cmd/: dunderlab_docs
docker/: build.sh  docs.dockerfile  upload.sh
docs/: Makefile  requirements
docs.copy/: requirements
docs.copy/source/: conf.py
docs.copy/source/_static/: create_favicon.sh  dunderlab_custom.css
docs.copy/source/notebooks/: 01-sphinx.ipynb  02-read_the_docs.ipynb  __sandbox.ipynb  readme.ipynb
docs/source/: conf.py  index.rst
docs/source/_modules/: docs.rst  docs.scripts.dunderlab_docs.rst  docs.scripts.rst
docs/source/_static/: attribution.txt  dunderlab_custom.css
docs/source/notebooks/: 01-getting_started.ipynb  01-read_the_docs.ipynb  01-sphinx.ipynb  02-docker.ipynb  02-read_the_docs.ipynb  03-read_the_docs.ipynb  04-github_workflow.ipynb  __sandbox.ipynb  readme.ipynb  readme.rst  run.sh
dunderlab/docs/: __init__.py
dunderlab/docs/scripts/: dunderlab_docs.py
dunderlab/docs/static/: custom.css  dunderlab_custom.css  roboto_font.css
dunderlab/docs/templates/: package.rst_t
dunderlab/utils/: __init__.py  automated-setup.yml  automated-sphinx-docs.yml
dunderlab/utils/colab/: __init__.py
workflows/: automated-docs-code-format.yml
